--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,6 +28,9 @@ section#login {
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
+
+  transition: width 0.3s, heigth 0.3s;
+  transition-timing-function: ease;
 }
 section#login > div#foto {
   display: block;
