--- a/estilos/media-querie.css
+++ b/estilos/media-querie.css
@@ -26,12 +26,15 @@
     width: 950px;
   }
   section#login > div#foto {
-    float: left;
+    float: right;
     width: 50%;
     height: 100vh;
   }
   section#login > div#formulario {
-    float: right;
+    float: left;
     width: 50%;
+  }
+  div#formulario > p {
+    font-size: 1.2em;
   }
 }
