--- a/estilos/style.css
+++ b/estilos/style.css
@@ -50,3 +50,61 @@ div#formulario > h1 {
 div#formulario > p {
   font-size: 0.8em;
 }
+form > input[type="submit"] {
+  display: block;
+  font-size: 1em;
+  width: 100%;
+  height: 40px;
+  background-color: #49a04d;
+  color: white;
+  border: none;
+  border-radius: 8px;
+}
+div.campo > label {
+  display: none;
+}
+div.campo span {
+  color: white;
+  background-color: black;
+  font-size: 2em;
+  width: 40px;
+  padding: 5px;
+}
+div.campo > input {
+  background-color: #70ce74;
+  font-size: 1em;
+  transform: translate(-10px);
+  width: calc(100% - 46px);
+  height: 100%;
+  border-radius: 8px;
+  padding: 4px;
+}
+form > div.campo {
+  background-color: #5f2c82;
+  display: block;
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  margin: 5px 0px;
+}
+form > input[type="submit"]:hover {
+  background-color: #205a23;
+  cursor: pointer;
+}
+form > a.botao {
+  display: block;
+  text-align: center;
+  font-size: 1em;
+  padding-top: 5px;
+  margin-top: 5px;
+  width: 100%;
+  height: 40px;
+
+  border: 1px solid #49a04d;
+  border-radius: 5px;
+  color: black;
+  text-decoration: none;
+}
+form > a.botao > span {
+  font-size: 0.8em;
+}
